# dialogue-conductor

./: .env  .gitignore  README.md  demo.py  main.py  pinecone_service.py  pyproject.toml  query.py  setup_db.py  train_bm25.py
tbbt/: The Big Bang Theory - S01E02 - The Big Bran Hypothesis Bluray-1080p.en.srt  The Big Bang Theory - S01E03 - The Fuzzy Boots Corollary Bluray-1080p.en.srt  The Big Bang Theory - S01E04 - The Luminous Fish Effect Bluray-1080p.en.srt  The Big Bang Theory - S01E05 - The Hamburger Postulate Bluray-1080p.en.srt  The Big Bang Theory - S01E06 - The Middle Earth Paradigm Bluray-1080p.en.srt  The Big Bang Theory - S01E07 - The Dumpling Paradox Bluray-1080p.en.srt  The Big Bang Theory - S01E08 - The Grasshopper Experiment Bluray-1080p.en.srt  The Big Bang Theory - S01E09 - The Cooper-Hofstadter Polarization Bluray-1080p.en.srt  The Big Bang Theory - S01E10 - The Loobenfeld Decay Bluray-1080p.en.srt  The Big Bang Theory - S01E11 - The Pancake Batter Anomaly Bluray-1080p.en.srt  The Big Bang Theory - S01E12 - The Jerusalem Duality Bluray-1080p.en.srt  The Big Bang Theory - S01E13 - The Bat Jar Conjecture Bluray-1080p.en.srt  The Big Bang Theory - S01E14 - The Nerdvana Annihilation Bluray-1080p.en.srt  The Big Bang Theory - S01E15 - The Pork Chop Indeterminacy Bluray-1080p.en.hi.srt  The Big Bang Theory - S01E16 - The Peanut Reaction Bluray-1080p.en.srt  The Big Bang Theory - S01E17 - The Tangerine Factor Bluray-1080p.en.srt
